# fabricmcp_server

./: .env.example  .gitignore  CONNECTION_TEST_SUMMARY.md  COPY_DATA_ACTIVITY_EXAMPLES.json  PIPELINE_FEATURES.md  README.md  UNIVERSAL_COPY_TOOL_EXAMPLES.json  digest.txt  pyproject.toml  sales.csv
corpus/: microsoft-fabric-rest-api-specs-8a5edab282632443.txt
src/fabricmcp_server/: activity_types.py  app.py  common_schemas.py  connection_types.py  copy_activity_schemas.py  fabric_api_client.py  fabric_models.py  flexible_copy_schemas.py  sessions.py
src/fabricmcp_server/tools/: __init__.py  configure_copy_activity.py  connection_manager.py  connections.py  copy_data_activity.py  datasets.py  items.py  lakehouses.py  notebooks.py  pipelines.py  universal_copy_activity.py
tests/: MCP_TOOLS_TEST_MATRIX.md  README.md  pytest.ini
tests/fabric_api/: conftest.py  test_all_connections.py  test_apply_activity_minimal.py  test_connection_types.py  test_corpus_activities.py
tests/fabric_api/corpus/activities/Copy/: Copy_amazonredshift_to_lakehouse_systematic.json  Copy_amazons3_to_lakehouse_systematic.json  Copy_azureblobstorage_to_lakehouse_systematic.json  Copy_azuredataexplorer_to_lakehouse_systematic.json  Copy_azurepostgresql_to_lakehouse_systematic.json  Copy_azuresqldatabase_to_lakehouse_systematic.json  amazons3_source_real.json  (+23 more)
tests/individual_tool_tests/: 01_create_lakehouses.py  04_test_new_copy_data_activity_tools.py  08_test_universal_copy_activity.py  lakehouse_info.json  new_copy_data_activity_test_results.json
tests/unit/: test_builders_roundtrip.py
(+23 files in other folders)
